[package]
name = "recs"
version = "0.1.0"
authors = ["tolumide-ng <tolumideshopein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
diesel = { version = "1.4.7", features = ["postgres", "chrono", "uuid"] }
chrono = { version = "0.4.10", features = ["serde"] }
rocket_cors = { version = "0.5.1", default-features = false }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.13", features = ["derive", "phone"] }
validator_derive = "0.13.0"
serde_json = { version = "1.0.64", default-features = false }
regex = "1"


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]